PLAT-139507: Fixed Layout bug for inline item on Gallium skin (#560)
* fixed bug for item inline on Gallium skin

* added ss tests

* updated variables-base

* fixed ss tests

* fixes

* fixes

* update changelog

--- a/styles/variables-base.less
+++ b/styles/variables-base.less
@@ -413,18 +413,18 @@
 
 // Item
 // ---------------------------------------
-@agate-item-border-width:             inherit;
+@agate-item-border-width:             0;
 @agate-item-content-width:            60%;
-@agate-item-centered-inline-max-width: @agate-item-inline-max-width;
+@agate-item-centered-inline-max-width: @agate-item-inline-min-width;
 @agate-item-font-size:                30px;
 @agate-item-font-weight:              @agate-base-font-weight;
 @agate-item-haslabel-padding:         21px 0;
 @agate-item-height:                   60px;
 @agate-item-inline-content-max-width: 420px;
 @agate-item-itemcontent-line-height:  inherit;
-@agate-item-inline-notcentered-itemcontent-min-width: initial;
-@agate-item-inline-max-width:         400px;
-@agate-item-inline-min-width:         initial;
+@agate-item-inline-notcentered-itemcontent-min-width: 420px;
+@agate-item-inline-max-width:         699px;
+@agate-item-inline-min-width:         480px;
 @agate-item-label-font-size:          inherit;
 @agate-item-label-line-height:        inherit;
 @agate-item-label-max-width:          30%;
